--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <div class="card-body">
             <div class="logo">
-                <img src="HAKASE PROD LOGO-01.png">
+                <img src="./figures/HAKASE PROD LOGO-01.png">
                 <h4>Who is Hakase.me?</h4>
             </div>
             <p>
@@ -39,7 +39,6 @@
         <footer>
             <a href="https://www.instagram.com/hakase.me/" target="_blank">
                 <button class="youtube">Instagram</button></a>
-            <button class="reset">Reset</button>
         </footer>
     </div>
 
