--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
 <body>
 <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+    <img class="image" src="./figures/DSC06950.jpg" draggable="false" />
     <img class="image" src="./figures/DSC03936-min.JPG" draggable="false" />
     <img class="image" src="./figures/DSC03984-min.JPG" draggable="false" />
-    <img class="image" src="./figures/DSC08878-min.jpg" draggable="false" />
+    <img class="image" src="./figures/DSC03897.jpg" draggable="false" />
     <img class="image" src="./figures/DSC08880 (2).jpg" draggable="false" />
+    <img class="image" src="./figures/DSC08878-min.jpg" draggable="false" />
     <img class="image" src="./figures/DSC08880 (1).JPG" draggable="false" />
-    <img class="image" src="https://images.unsplash.com/photo-1496753480864-3e588e0269b3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2134&q=80" draggable="false" />
-    <img class="image" src="https://images.unsplash.com/photo-1613346945084-35cccc812dd5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1759&q=80" draggable="false" />
-    <img class="image" src="https://images.unsplash.com/photo-1516681100942-77d8e7f9dd97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" draggable="false" />
+
+
 </div>
 
 <div id="card" class="card">
