--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Day #51 - Draggable Profile Card | AsmrProg</title>
+    <title>Hakaseの目</title>
 </head>
 
 <body>
@@ -27,14 +27,17 @@
         </header>
         <div class="card-body">
             <div class="logo">
-                <img src="./figures/HAKASE PROD LOGO-01.png">
+                <img src="./figures/HAKASE PROD LOGO-01.png" draggable="false">
                 <h4>Who is Hakase.me?</h4>
             </div>
             <p>
                 Hakase.me is a photographer that mainly shoots copslayer and products.
                 If you are interested in taking photo with us. You can find us in instagram with this link :<br><br> <a
                     href="https://www.instagram.com/hakase.me/" target="_blank">https://www.instagram.com/hakase.me/</a>
-                <br><br>We are looking forward to work with you!
+                <br><br>We are looking forward to work with you!<br><br>
+                <div class="polaroid">
+                    <img src="./figures/Hakase-1.png" alt="Norther Lights" style="width:100%">
+                    </div>
             </p>
         </div>
         <footer>
